Filtering data according to time interval. Filtering sensors according to hubID, type and origin.
